Updating to-do file

--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,12 @@
 Remaining tasks:
 
 Important:
+- Use the sources we cited in project proposal, since this is part of rubric
 - Remove unnecessary columns from excel
 - Consolidate "remove from future" and "don't take after" columns
 	- E.g. after 121, don't take 50. Currently the 50's might be in wrong column
-- MRV
-- LCV
+- MRV (maybe get info from sources?)
+- LCV (same as above)
 - Plot runtimes of different algorithms/heuristics
 - Compare runtimes theoretically
 - Testing
