--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 Remaining tasks:
 
 Priority:
-
+- If user inputs history, then we need to remove all variables from the available set of previous semesters so that we don't try to add courses in the past that the user did not take
+X Don't create duplicate solutions
 
 Important:
 - For a user's input, only return ~5-10 schedules (right now we generate all)
@@ -16,7 +17,7 @@ Important:
 - Decide about freeing future courses from unavailabe set vs. looking back at prereqs
 - MRV (maybe get info from sources?)
 - LCV (same as above)
-- After assigning a course to semester i, branch out from there and look at future semesters in addition to trying to fulfill the remaining slots in semester i
+X After assigning a course to semester i, branch out from there and look at future semesters in addition to trying to fulfill the remaining slots in semester i
 - Handle ES 153 as a 140s course when checking for breadth
 - Take user input about whether to optimize on q/w/a, combination, or none
 	- Complete order_domain_values() function to sort the domain (in list form) by lowest workload, etc.
