--- a/todo.txt
+++ b/todo.txt
@@ -1,27 +1,22 @@
 Remaining tasks:
 
 Priority:
+- Only generate 10 solutions total instead of generating all and choosing 10
 X If user inputs history, then we need to remove all variables from the available set of previous semesters so that we don't try to add courses in the past that the user did not take
 X Don't create duplicate solutions
-- LCV (started template but haven't coded anything)
-- Take user input about whether to optimize on q/w/a, combination, or none
-	- Complete order_domain_values() function to sort the domain (in list form) by lowest workload, etc.
-	- Shuffle values and choose randomly
-- Write our own optimize() function that is just a linear combination of how we weight q/w/a:
-	E.g. score = 10*q - 1.5*w + 0.5*a
+X LCV (started template but haven't coded anything)
 
 Small:
 - Remove pointer in dictionary to "strict" one_of (I think) because the column is empty
-- Don't count CS 20 as a technical
+- Add to excel: after ES 50, don't take ES 52, and vice versa
+X Don't count CS 20 as a technical
 X Handle ES 153 as a 140s course when checking for breadth
 
 Important:
-- Expand forward checking?: Look at future semesters as well in addition to verifying current semester
 - Plot runtimes of different algorithms/heuristics
 - Compare runtimes theoretically
 - Testing
 - Report
-- Only generate 10 solutions total instead of generating all and choosing 10
 - Use the sources we cited in project proposal, since this is part of rubric
 X Decide: Stop adding courses to a schedule once it meets the requirements? Probably yes
 X For a user's input, only return ~5-10 schedules
@@ -33,6 +28,7 @@ X Combine "add_course" and "add_course_with_FC" methods, similar to is_complete(
 X Decide about freeing future courses from unavailabe set vs. looking back at prereqs
 X MRV (maybe get info from sources?)
 X After assigning a course to semester i, branch out from there and look at future semesters in addition to trying to fulfill the remaining slots in semester i
+X Expand forward checking?: Look at future semesters as well in addition to verifying current semester
 
 Maybe:
 - AC-3
@@ -43,4 +39,11 @@ Maybe:
 
 TF help:
 - Local search algorithm
+
+NOTE: Didn't do the following 2 tasks because finding the true optimal solution requires enumerating all possible solutions instead of generating a smaller amount
+- Take user input about whether to optimize on q/w/a, combination, or none
+	- Complete order_domain_values() function to sort the domain (in list form) by lowest workload, etc.
+	- Shuffle values and choose randomly
+- Write our own optimize() function that is just a linear combination of how we weight q/w/a:
+	E.g. score = 10*q - 1.5*w + 0.5*a
 
